import("//build/config/linux/gtk.gni")
import("//build/config/linux/pkg_config.gni")
import("//build/config/ui.gni")
import("//build/config/webkit_features.gni")

config("wtf_public_config") {
  cflags = [
    "-Wno-extra-semi",
    "-Wno-header-hygiene",
  ]

  include_dirs = [
    "//Source/WTF",
    "$root_gen_dir/build",
  ]
}

config("wtf_config") {
  include_dirs = [
    "//Source/WTF",
    "//Source/WTF/wtf",
    "//Source/WTF/wtf/dtoa",
    "//Source/WTF/wtf/fast_float",
    "//Source/WTF/wtf/persistence",
    "//Source/WTF/wtf/text",
    "//Source/WTF/wtf/text/icu",
    "//Source/WTF/wtf/threads",
    "//Source/WTF/wtf/unicode",
  ]
}

component("wtf") {
  sources = [
    "ASCIICType.cpp",
    "ASCIICType.h",
    "AccessibleAddress.h",
    "AggregateLogger.h",
    "Algorithms.h",
    "AnsiColors.h",
    "ApproximateTime.cpp",
    "ApproximateTime.h",
    "ArgumentCoder.h",
    "Assertions.cpp",
    "Assertions.h",
    "Atomics.h",
    "AutodrainedPool.h",
    "AutomaticThread.cpp",
    "AutomaticThread.h",
    "BackwardsGraph.h",
    "Bag.h",
    "BagToHashMap.h",
    "BitSet.h",
    "BitVector.cpp",
    "BitVector.h",
    "BlockObjCExceptions.h",
    "BlockPtr.h",
    "BloomFilter.cpp",
    "BloomFilter.h",
    "BooleanLattice.h",
    "Box.h",
    "BoxPtr.h",
    "Brigand.h",
    "BubbleSort.h",
    "BumpPointerAllocator.h",
    "ButterflyArray.h",
    "ByteOrder.h",
    "CPUTime.cpp",
    "CPUTime.h",
    "CagedPtr.h",
    "CagedUniquePtr.h",
    "CallbackAggregator.h",
    "CanMakeWeakPtr.h",
    "CancellableTask.h",
    "CheckedArithmetic.h",
    "CheckedBoolean.h",
    "CheckedPtr.h",
    "CheckedRef.h",
    "ClockType.cpp",
    "ClockType.h",
    "CodePtr.cpp",
    "CodePtr.h",
    "CommaPrinter.h",
    "CompactPointerTuple.h",
    "CompactPtr.h",
    "CompactRefPtr.h",
    "CompactRefPtrTuple.h",
    "CompactUniquePtrTuple.h",
    "CompilationThread.cpp",
    "CompilationThread.h",
    "Compiler.h",
    "CompletionHandler.h",
    "ConcurrentBuffer.cpp",
    "ConcurrentBuffer.h",
    "ConcurrentPtrHashSet.cpp",
    "ConcurrentPtrHashSet.h",
    "ConcurrentVector.h",
    "Condition.h",
    "CountingLock.cpp",
    "CountingLock.h",
    "CrossThreadCopier.cpp",
    "CrossThreadCopier.h",
    "CrossThreadQueue.h",
    "CrossThreadTask.h",
    "CrossThreadTaskHandler.cpp",
    "CrossThreadTaskHandler.h",
    "CryptographicUtilities.cpp",
    "CryptographicUtilities.h",
    "CryptographicallyRandomNumber.cpp",
    "CryptographicallyRandomNumber.h",
    "CurrentTime.cpp",
    "DataLog.cpp",
    "DataLog.h",
    "DataMutex.h",
    "DataRef.h",
    "DateMath.cpp",
    "DateMath.h",
    "DebugHeap.cpp",
    "DebugHeap.h",
    "DebugUtilities.h",
    "DeferrableRefCounted.h",
    "Deque.h",
    "DisallowCType.h",
    "Dominators.h",
    "DoublyLinkedList.h",
    "EmbeddedFixedVector.cpp",
    "EmbeddedFixedVector.h",
    "EnumClassOperatorOverloads.h",
    "EnumTraits.h",
    "EnumeratedArray.h",
    "Expected.h",
    "ExperimentalFeatureNames.h",
    "ExportMacros.h",
    "FailureAction.h",
    "FastBitVector.cpp",
    "FastBitVector.h",
    "FastFloat.cpp",
    "FastFloat.h",
    "FastMalloc.cpp",
    "FastMalloc.h",
    "FastTLS.h",
    "FilePrintStream.cpp",
    "FilePrintStream.h",
    "FileSystem.cpp",
    "FileSystem.h",
    "FixedBitVector.h",
    "FixedVector.h",
    "FixedWidthDouble.h",
    "FlipBytes.h",
    "ForbidHeapAllocation.h",
    "Forward.h",
    "Function.h",
    "FunctionDispatcher.cpp",
    "FunctionDispatcher.h",
    "FunctionPtr.h",
    "FunctionTraits.h",
    "GenericHashKey.h",
    "GenericTimeMixin.h",
    "GetPtr.h",
    "Gigacage.cpp",
    "Gigacage.h",
    "GlobalVersion.cpp",
    "GlobalVersion.h",
    "GraphNodeWorklist.h",
    "GregorianDateTime.cpp",
    "GregorianDateTime.h",
    "HashCountedSet.h",
    "HashFunctions.h",
    "HashIterators.h",
    "HashMap.h",
    "HashMethod.h",
    "HashSet.h",
    "HashTable.cpp",
    "HashTable.h",
    "HashTraits.h",
    "Hasher.h",
    "HexNumber.cpp",
    "HexNumber.h",
    "Identified.h",
    "Indenter.h",
    "IndexKeyType.h",
    "IndexMap.h",
    "IndexSet.h",
    "IndexSparseSet.h",
    "IndexedContainerIterator.h",
    "InlineASM.h",
    "Insertion.h",
    "InstanceCounted.h",
    "Int128.cpp",
    "Int128.h",
    "InterferenceGraph.h",
    "IsoMalloc.h",
    "IsoMallocInlines.h",
    "IterationStatus.h",
    "IteratorAdaptors.h",
    "IteratorRange.h",
    "JSONValues.cpp",
    "JSONValues.h",
    "JSValueMalloc.h",
    "KeyValuePair.h",
    "LEBDecoder.h",
    "Language.cpp",
    "Language.h",
    "LazyRef.h",
    "LazyUniqueRef.h",
    "LikelyDenseUnsignedIntegerSet.cpp",
    "LikelyDenseUnsignedIntegerSet.h",
    "ListDump.h",
    "ListHashSet.h",
    "Liveness.h",
    "Lock.cpp",
    "Lock.h",
    "LockAlgorithm.h",
    "LockAlgorithmInlines.h",
    "LockedPrintStream.cpp",
    "LockedPrintStream.h",
    "Locker.h",
    "LocklessBag.h",
    "LogChannels.cpp",
    "LogChannels.h",
    "LogInitialization.cpp",
    "LogInitialization.h",
    "Logger.cpp",
    "Logger.h",
    "LoggerHelper.h",
    "Logging.cpp",
    "Logging.h",
    "LoggingAccumulator.h",
    "LoggingHashID.h",
    "LoggingHashMap.h",
    "LoggingHashSet.h",
    "LoggingHashTraits.h",
    "MachSendRight.h",
    "MainThread.cpp",
    "MainThread.h",
    "MainThreadData.h",
    "MallocPtr.h",
    "Markable.h",
    "MathExtras.h",
    "MediaTime.cpp",
    "MediaTime.h",
    "MemoryFootprint.h",
    "MemoryPressureHandler.cpp",
    "MemoryPressureHandler.h",
    "MessageQueue.h",
    "MetaAllocator.cpp",
    "MetaAllocator.h",
    "MetaAllocatorHandle.h",
    "MonotonicTime.cpp",
    "MonotonicTime.h",
    "NakedPtr.h",
    "NakedRef.h",
    "NativePromise.cpp",
    "NativePromise.h",
    "NaturalLoops.h",
    "NeverDestroyed.h",
    "NoLock.h",
    "NoTailCalls.h",
    "Noncopyable.h",
    "Nonmovable.h",
    "NotFound.h",
    "NumberOfCores.cpp",
    "NumberOfCores.h",
    "OSAllocator.h",
    "OSObjectPtr.h",
    "OSRandomSource.cpp",
    "OSRandomSource.h",
    "ObjCRuntimeExtras.h",
    "ObjectIdentifier.cpp",
    "ObjectIdentifier.h",
    "Observer.h",
    "OptionSet.h",
    "OptionSetHash.h",
    "OrderMaker.h",
    "Packed.h",
    "PackedRef.h",
    "PackedRefPtr.h",
    "PageAllocation.h",
    "PageBlock.cpp",
    "PageBlock.h",
    "PageReservation.h",
    "ParallelHelperPool.cpp",
    "ParallelHelperPool.h",
    "ParallelJobs.h",
    "ParallelJobsGeneric.cpp",
    "ParallelJobsGeneric.h",
    "ParallelJobsLibdispatch.h",
    "ParallelJobsOpenMP.h",
    "ParallelVectorIterator.h",
    "ParkingLot.cpp",
    "ParkingLot.h",
    "Platform.h",
    "PlatformCPU.h",
    "PlatformCallingConventions.h",
    "PlatformEnable.h",
    "PlatformHave.h",
    "PlatformLegacy.h",
    "PlatformOS.h",
    "PlatformRegisters.h",
    "PlatformUse.h",
    "PointerComparison.h",
    "PointerPreparations.h",
    "PrintStream.cpp",
    "PrintStream.h",
    "PriorityQueue.h",
    "ProcessID.h",
    "ProcessPrivilege.cpp",
    "ProcessPrivilege.h",
    "PtrTag.h",
    "RAMSize.cpp",
    "RAMSize.h",
    "RandomDevice.cpp",
    "RandomDevice.h",
    "Range.h",
    "RangeSet.h",
    "RawHex.h",
    "RawPointer.h",
    "RawPtrTraits.h",
    "RawValueTraits.h",
    "ReadWriteLock.cpp",
    "ReadWriteLock.h",
    "RecursableLambda.h",
    "RecursiveLockAdapter.h",
    "RedBlackTree.h",
    "Ref.h",
    "RefCounted.cpp",
    "RefCounted.h",
    "RefCountedFixedVector.h",
    "RefCountedLeakCounter.cpp",
    "RefCountedLeakCounter.h",
    "RefCounter.h",
    "RefPtr.h",
    "RefVector.h",
    "ReferenceWrapperVector.h",
    "ResourceUsage.h",
    "RetainPtr.h",
    "RobinHoodHashMap.h",
    "RobinHoodHashSet.h",
    "RobinHoodHashTable.h",
    "RunLoop.cpp",
    "RunLoop.h",
    "SHA1.cpp",
    "SHA1.h",
    "SIMDHelpers.h",
    "SafeStrerror.cpp",
    "SafeStrerror.h",
    "SaturatedArithmetic.h",
    "SchedulePair.h",
    "Scope.h",
    "ScopedLambda.h",
    "Seconds.cpp",
    "Seconds.h",
    "SegmentedVector.cpp",
    "SegmentedVector.h",
    "SentinelLinkedList.h",
    "SetForScope.h",
    "SharedTask.h",
    "SignedPtr.h",
    "SimpleStats.h",
    "SingleRootGraph.h",
    "SingleThreadIntegralWrapper.h",
    "SinglyLinkedList.h",
    "SinglyLinkedListWithTail.h",
    "SixCharacterHash.cpp",
    "SixCharacterHash.h",
    "SmallMap.h",
    "SmallSet.cpp",
    "SmallSet.h",
    "SoftLinking.h",
    "SortedArrayMap.h",
    "SpanningTree.h",
    "Spectrum.h",
    "StackBounds.cpp",
    "StackBounds.h",
    "StackCheck.cpp",
    "StackCheck.h",
    "StackPointer.cpp",
    "StackPointer.h",
    "StackShot.h",
    "StackShotProfiler.h",
    "StackStats.cpp",
    "StackStats.h",
    "StackTrace.cpp",
    "StackTrace.h",
    "StdFilesystem.h",
    "StdIntExtras.h",
    "StdLibExtras.h",
    "StdList.h",
    "StdMap.h",
    "StdSet.h",
    "StdUnorderedMap.h",
    "StdUnorderedSet.h",
    "Stopwatch.h",
    "StreamBuffer.h",
    "StringExtras.h",
    "StringHashDumpContext.h",
    "StringPrintStream.cpp",
    "StringPrintStream.h",
    "SuspendableWorkQueue.cpp",
    "SuspendableWorkQueue.h",
    "SynchronizedFixedQueue.h",
    "SystemFree.h",
    "SystemMalloc.h",
    "SystemTracing.h",
    "TZoneMalloc.h",
    "TZoneMallocInitialization.h",
    "TZoneMallocInlines.h",
    "TaggedArrayStoragePtr.h",
    "ThreadAssertions.h",
    "ThreadGroup.cpp",
    "ThreadGroup.h",
    "ThreadMessage.cpp",
    "ThreadMessage.h",
    "ThreadSafeRefCounted.h",
    "ThreadSafeWeakHashSet.h",
    "ThreadSafeWeakPtr.h",
    "ThreadSafetyAnalysis.h",
    "ThreadSanitizerSupport.h",
    "ThreadSpecific.h",
    "Threading.cpp",
    "Threading.h",
    "ThreadingPrimitives.h",
    "TimeWithDynamicClockType.cpp",
    "TimeWithDynamicClockType.h",
    "TimingScope.cpp",
    "TimingScope.h",
    "TinyLRUCache.h",
    "TinyPtrSet.h",
    "TrailingArray.h",
    "TranslatedProcess.h",
    "TriState.h",
    "TypeCasts.h",
    "TypeTraits.h",
    "URL.cpp",
    "URL.h",
    "URLHash.h",
    "URLHelpers.cpp",
    "URLHelpers.h",
    "URLParser.cpp",
    "URLParser.h",
    "UUID.cpp",
    "UUID.h",
    "UnalignedAccess.h",
    "Unexpected.h",
    "UniStdExtras.h",
    "UnionFind.h",
    "UniqueArray.cpp",
    "UniqueArray.h",
    "UniqueRef.h",
    "UniqueRefVector.h",
    "VMTags.h",
    "ValueCheck.h",
    "Vector.cpp",
    "Vector.h",
    "VectorHash.h",
    "VectorTraits.h",
    "WTFAssertions.cpp",
    "WTFConfig.cpp",
    "WTFConfig.h",
    "WTFProcess.cpp",
    "WTFProcess.h",
    "WTFSemaphore.h",
    "WallTime.cpp",
    "WallTime.h",
    "WeakHashCountedSet.h",
    "WeakHashMap.h",
    "WeakHashSet.h",
    "WeakListHashSet.h",
    "WeakObjCPtr.h",
    "WeakPtr.cpp",
    "WeakPtr.h",
    "WeakPtrFactory.h",
    "WeakPtrImpl.h",
    "WeakRandom.h",
    "WeakRandomNumber.cpp",
    "WeakRandomNumber.h",
    "WeakRef.h",
    "WindowsExtras.h",
    "WordLock.cpp",
    "WordLock.h",
    "WorkQueue.cpp",
    "WorkQueue.h",
    "WorkerPool.cpp",
    "WorkerPool.h",
    "dragonbox/detail/bits.h",
    "dragonbox/detail/cache_holder.h",
    "dragonbox/detail/decimal_fp.h",
    "dragonbox/detail/div.h",
    "dragonbox/detail/log.h",
    "dragonbox/detail/policy.h",
    "dragonbox/detail/policy_holder.h",
    "dragonbox/detail/util.h",
    "dragonbox/detail/wuint.h",
    "dragonbox/dragonbox.h",
    "dragonbox/dragonbox_to_chars.cpp",
    "dragonbox/dragonbox_to_chars.h",
    "dragonbox/ieee754_format.h",
    "dtoa.cpp",
    "dtoa.h",
    "dtoa/bignum-dtoa.cc",
    "dtoa/bignum-dtoa.h",
    "dtoa/bignum.cc",
    "dtoa/bignum.h",
    "dtoa/cached-powers.cc",
    "dtoa/cached-powers.h",
    "dtoa/diy-fp.cc",
    "dtoa/diy-fp.h",
    "dtoa/double-conversion.cc",
    "dtoa/double-conversion.h",
    "dtoa/fast-dtoa.cc",
    "dtoa/fast-dtoa.h",
    "dtoa/fixed-dtoa.cc",
    "dtoa/fixed-dtoa.h",
    "dtoa/ieee.h",
    "dtoa/strtod.cc",
    "dtoa/strtod.h",
    "dtoa/utils.h",
    "fast_float/ascii_number.h",
    "fast_float/bigint.h",
    "fast_float/decimal_to_binary.h",
    "fast_float/digit_comparison.h",
    "fast_float/fast_float.h",
    "fast_float/fast_table.h",
    "fast_float/float_common.h",
    "fast_float/parse_number.h",
    "fast_float/simple_decimal_conversion.h",
    "generic/MainThreadGeneric.cpp",
    "generic/MemoryFootprintGeneric.cpp",
    "generic/WorkQueueGeneric.cpp",
    "persistence/PersistentCoders.cpp",
    "persistence/PersistentCoders.h",
    "persistence/PersistentDecoder.cpp",
    "persistence/PersistentDecoder.h",
    "persistence/PersistentEncoder.cpp",
    "persistence/PersistentEncoder.h",
    "simde/arm/neon.h",
    "simde/arm/sve.h",
    "simde/simde.h",
    "text/ASCIIFastPath.h",
    "text/ASCIILiteral.cpp",
    "text/ASCIILiteral.h",
    "text/AdaptiveStringSearcher.h",
    "text/AtomString.cpp",
    "text/AtomString.h",
    "text/AtomStringHash.h",
    "text/AtomStringImpl.cpp",
    "text/AtomStringImpl.h",
    "text/AtomStringTable.cpp",
    "text/AtomStringTable.h",
    "text/Base64.cpp",
    "text/Base64.h",
    "text/CString.cpp",
    "text/CString.h",
    "text/CharacterProperties.h",
    "text/CodePointIterator.h",
    "text/ConversionMode.h",
    "text/EscapedFormsForJSON.h",
    "text/ExternalStringImpl.cpp",
    "text/ExternalStringImpl.h",
    "text/FastCharacterComparison.h",
    "text/IntegerToStringConversion.h",
    "text/LChar.h",
    "text/LineEnding.cpp",
    "text/LineEnding.h",
    "text/NullTextBreakIterator.h",
    "text/OrdinalNumber.h",
    "text/StringBuffer.cpp",
    "text/StringBuffer.h",
    "text/StringBuilder.cpp",
    "text/StringBuilder.h",
    "text/StringBuilderInternals.h",
    "text/StringBuilderJSON.cpp",
    "text/StringCommon.cpp",
    "text/StringCommon.h",
    "text/StringConcatenate.h",
    "text/StringConcatenateNumbers.h",
    "text/StringHash.h",
    "text/StringHasher.h",
    "text/StringHasherInlines.h",
    "text/StringImpl.cpp",
    "text/StringImpl.h",
    "text/StringOperators.h",
    "text/StringParsingBuffer.h",
    "text/StringSearch.h",
    "text/StringToIntegerConversion.h",
    "text/StringView.cpp",
    "text/StringView.h",
    "text/SuperFastHash.h",
    "text/SymbolImpl.cpp",
    "text/SymbolImpl.h",
    "text/SymbolRegistry.cpp",
    "text/SymbolRegistry.h",
    "text/TextBreakIterator.cpp",
    "text/TextBreakIterator.h",
    "text/TextBreakIteratorInternalICU.h",
    "text/TextPosition.h",
    "text/TextStream.cpp",
    "text/TextStream.h",
    "text/UTF8ConversionError.h",
    "text/UniquedStringImpl.h",
    "text/WTFString.cpp",
    "text/WTFString.h",
    "text/WYHash.h",
    "text/icu/TextBreakIteratorICU.h",
    "text/icu/UTextProvider.cpp",
    "text/icu/UTextProvider.h",
    "text/icu/UTextProviderLatin1.cpp",
    "text/icu/UTextProviderLatin1.h",
    "text/icu/UTextProviderUTF16.cpp",
    "text/icu/UTextProviderUTF16.h",
    "threads/BinarySemaphore.cpp",
    "threads/BinarySemaphore.h",
    "threads/Signals.cpp",
    "threads/Signals.h",
    "unicode/CharacterNames.h",
    "unicode/Collator.h",
    "unicode/CollatorDefault.cpp",
    "unicode/UTF8Conversion.cpp",
    "unicode/UTF8Conversion.h",
    "unicode/icu/CollatorICU.cpp",
    "unicode/icu/ICUHelpers.cpp",
    "unicode/icu/ICUHelpers.h",
  ]

  configs += [ ":wtf_config" ]
  public_configs = [ ":wtf_public_config" ]
  configs -= [ "//build/config/compiler:chromium_code" ]
  configs += [ "//build/config/compiler:no_chromium_code" ]

  libs = [ "stdc++fs" ]

  if (is_apple) {
    sources += [ "darwin/OSLogPrintStream.mm" ]
  }

  if (is_mac) {
    sources += [
      "PlatformEnableCocoa.h",
      "cf/CFURLExtras.cpp",
      "cf/CFURLExtras.h",
      "cf/FileSystemCF.cpp",
      "cf/LanguageCF.cpp",
      "cf/RunLoopCF.cpp",
      "cf/SchedulePairCF.cpp",
      "cf/TypeCastsCF.h",
      "cf/URLCF.cpp",
      "cf/VectorCF.h",
      "cocoa/AutodrainedPool.cpp",
      "cocoa/CrashReporter.cpp",
      "cocoa/CrashReporter.h",
      "cocoa/Entitlements.h",
      "cocoa/Entitlements.mm",
      "cocoa/FileSystemCocoa.mm",
      "cocoa/LanguageCocoa.mm",
      "cocoa/LoggingCocoa.mm",
      "cocoa/MachSendRight.cpp",
      "cocoa/MainThreadCocoa.mm",
      "cocoa/MemoryFootprintCocoa.cpp",
      "cocoa/MemoryPressureHandlerCocoa.mm",
      "cocoa/NSURLExtras.h",
      "cocoa/NSURLExtras.mm",
      "cocoa/ResourceUsageCocoa.cpp",
      "cocoa/RuntimeApplicationChecksCocoa.cpp",
      "cocoa/RuntimeApplicationChecksCocoa.h",
      "cocoa/SoftLinking.h",
      "cocoa/SpanCocoa.h",
      "cocoa/SystemTracingCocoa.cpp",
      "cocoa/TollFreeBridging.h",
      "cocoa/TypeCastsCocoa.h",
      "cocoa/URLCocoa.mm",
      "cocoa/UUIDCocoa.mm",
      "cocoa/VectorCocoa.h",
      "cocoa/WorkQueueCocoa.cpp",
      "darwin/LibraryPathDiagnostics.h",
      "darwin/LibraryPathDiagnostics.mm",
      "darwin/OSLogPrintStream.h",
      "darwin/OSLogPrintStream.mm",
      "darwin/WeakLinking.h",
      "mac/FileSystemMac.mm",
      "mac/SchedulePairMac.mm",
      "spi/cocoa/CFXPCBridgeSPI.h",
      "spi/cocoa/CrashReporterClientSPI.h",
      "spi/cocoa/IOReturnSPI.h",
      "spi/cocoa/IOSurfaceSPI.h",
      "spi/cocoa/IOTypesSPI.h",
      "spi/cocoa/MachVMSPI.h",
      "spi/cocoa/NSLocaleSPI.h",
      "spi/cocoa/NSObjCRuntimeSPI.h",
      "spi/cocoa/OSLogSPI.h",
      "spi/cocoa/SecuritySPI.h",
      "spi/cocoa/objcSPI.h",
      "spi/darwin/AbortWithReasonSPI.h",
      "spi/darwin/CodeSignSPI.h",
      "spi/darwin/DataVaultSPI.h",
      "spi/darwin/DispatchSPI.h",
      "spi/darwin/OSVariantSPI.h",
      "spi/darwin/ProcessMemoryFootprint.h",
      "spi/darwin/SandboxSPI.h",
      "spi/darwin/XPCSPI.h",
      "spi/darwin/dyldSPI.h",
      "spi/mac/MetadataSPI.h",
    ]

    if (is_c) {
      sources += [ "mac/MachExceptions.defs" ]
    }
  }

  if (is_posix) {
    sources += [
      "posix/CPUTimePOSIX.cpp",
      "posix/FileSystemPOSIX.cpp",
      "posix/OSAllocatorPOSIX.cpp",
      "posix/ThreadingPOSIX.cpp",
      "text/unix/TextBreakIteratorInternalICUUnix.cpp",
      "unix/LanguageUnix.cpp",
      "unix/LoggingUnix.cpp",
      "unix/UniStdExtrasUnix.cpp",
    ]
  }

  if (is_linux) {
    sources -= [ "generic/MemoryFootprintGeneric.cpp" ]

    sources += [
      "glib/ChassisType.cpp",
      "glib/ChassisType.h",
      "glib/FileSystemGlib.cpp",
      "glib/GMutexLocker.h",
      "glib/GRefPtr.cpp",
      "glib/GRefPtr.h",
      "glib/GSocketMonitor.cpp",
      "glib/GSocketMonitor.h",
      "glib/GThreadSafeWeakPtr.h",
      "glib/GTypedefs.h",
      "glib/GUniquePtr.h",
      "glib/GWeakPtr.h",
      "glib/RunLoopGLib.cpp",
      "glib/RunLoopSourcePriority.h",
      "glib/Sandbox.cpp",
      "glib/Sandbox.h",
      "glib/SocketConnection.cpp",
      "glib/SocketConnection.h",
      "glib/WTFGType.h",
      "linux/CurrentProcessMemoryStatus.cpp",
      "linux/CurrentProcessMemoryStatus.h",
      "linux/MemoryFootprintLinux.cpp",
      "linux/ProcessMemoryFootprint.h",
      "linux/RealTimeThreads.cpp",
      "linux/RealTimeThreads.h",
      "unix/UnixFileDescriptor.h",
    ]

    if (use_gtk) {
      sources += [ "unix/MemoryPressureHandlerUnix.cpp" ]
    } else {
      sources += [ "generic/MemoryPressureHandlerGeneric.cpp" ]
    }

    if (use_glib) {
      # sources -= ["URL.cpp"]
      sources += [
        "PlatformEnableGlib.h",
        "glib/URLGLib.cpp",
      ]

      public_configs += [ "//build/config/linux:glib" ]
    }
  }

  if (use_gtk) {
    sources += []
  }

  if (is_win) {
    sources += [
      "generic/WorkQueueGeneric.cpp",
      "text/win/StringWin.cpp",
      "text/win/TextBreakIteratorInternalICUWin.cpp",
      "text/win/WCharStringExtras.h",
      "win/CPUTimeWin.cpp",
      "win/DbgHelperWin.cpp",
      "win/DbgHelperWin.h",
      "win/FileSystemWin.cpp",
      "win/GDIObject.h",
      "win/LanguageWin.cpp",
      "win/LoggingWin.cpp",
      "win/MainThreadWin.cpp",
      "win/MemoryFootprintWin.cpp",
      "win/MemoryPressureHandlerWin.cpp",
      "win/OSAllocatorWin.cpp",
      "win/PathWalker.cpp",
      "win/PathWalker.h",
      "win/RunLoopWin.cpp",
      "win/SignalsWin.cpp",
      "win/SoftLinking.h",
      "win/ThreadingWin.cpp",
      "win/Win32Handle.cpp",
      "win/Win32Handle.h",
    ]

    libs += [
      "deghelp",
      "shlwapi",
      "winmm",
    ]
  }

  deps = [ "//build:cmake_buildflags" ]

  public_deps = [ "//third_party/icu" ]

  if (!use_system_malloc) {
    public_deps += [ "//Source/bmalloc" ]
  }

  cflags = [
    "-I",
    rebase_path("//Source/WTF/config.h", root_build_dir),
  ]

  defines = [ "BUILDING_WTF" ]
}
